docker/etc/kubernetes/manifests/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  ports:
  - port: 8080
  selector:
    app: nginx
  type: ClusterIP
